# RoboticsProject

./: .gitignore  README.md
Videos/kalman_tests/test_01/: test1.m4v
alpha_star/: CMakeLists.txt  package.xml
alpha_star/scripts/: a_star.py  a_star2.py  a_star2old.py  a_star3.py  curvemath.py  info  linemath.py  pdcon.py  plotarisma.py
imu/: CMakeLists.txt  package.xml
imu/scripts/: L3GD20.py  LSM303.py  imu.py
kalman_tests/test_02/: test2.m4v
path_planning/: CMakeLists.txt
path_planning/scripts/: #planner.py#  planner.py
project/: CMakeLists.txt  package.xml
project/launch/: #kalman_filter.launch#  a_star.launch  identification.launch  kalman_filter.launch  planning.launch  project.launch  wall_following.launch
project/scripts/: angvel  angwalker.py  identification.py  identification_mag.py  pdcon.py  raw_data  rosfollower.py  serv.py  walker.py
random_walk/launch/: random_walk.launch
random_walk/src/: walker.cpp
state_estimation/: CMakeLists.txt  package.xml
state_estimation/scripts/: #kalmanfilter.py#  Hequations  Hequations_none  angle  deviation.py  dist  equations  equations_none  general_kalmanfilter.py  general_kalmanfilter2.py  kalmanfilter.py  linemath.py  localizer.py  localizer2.py  localizer_thread.py  mag_cal.py  pl.py  plotarisma.py  xy  xy1  xy_cal
wall_following/: CMakeLists.txt  package.xml
wall_following/scripts/: pdcon.py  rosfollower.py  rosfollowerold.py
